--- a/LoginDemo/Resources/Base.lproj/Main.storyboard
+++ b/LoginDemo/Resources/Base.lproj/Main.storyboard
@@ -18,23 +18,81 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nSH-Ui-vB5">
-                                <rect key="frame" x="20" y="108" width="374" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="Kdi-tT-l9i"/>
-                                </constraints>
+                                <rect key="frame" x="71" y="108" width="323" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                             </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Ky-9e-4kb">
+                                <rect key="frame" x="71" y="182" width="323" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="alphabet" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1nC-Nu-4fe">
+                                <rect key="frame" x="40" y="322" width="334" height="30"/>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="登录">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <state key="disabled">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82k-eM-Hg1">
+                                <rect key="frame" x="20" y="114.5" width="41" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tsJ-Yo-7hl">
+                                <rect key="frame" x="20" y="188.5" width="35" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y0C-wn-WMA">
+                                <rect key="frame" x="230.5" y="150" width="4" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="li8-6Y-C9f">
+                                <rect key="frame" x="230.5" y="224" width="4" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="nSH-Ui-vB5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="OfE-yS-vtB"/>
+                            <constraint firstItem="tsJ-Yo-7hl" firstAttribute="centerY" secondItem="1Ky-9e-4kb" secondAttribute="centerY" id="5W3-bU-0V4"/>
+                            <constraint firstItem="nSH-Ui-vB5" firstAttribute="centerY" secondItem="82k-eM-Hg1" secondAttribute="centerY" id="7Jo-tu-NYL"/>
+                            <constraint firstItem="1nC-Nu-4fe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="C06-Is-AMO"/>
+                            <constraint firstItem="82k-eM-Hg1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="FNB-Tz-83P"/>
+                            <constraint firstItem="1Ky-9e-4kb" firstAttribute="leading" secondItem="nSH-Ui-vB5" secondAttribute="leading" id="LVb-NR-1gn"/>
+                            <constraint firstItem="y0C-wn-WMA" firstAttribute="top" secondItem="nSH-Ui-vB5" secondAttribute="bottom" constant="8" symbolic="YES" id="N3c-NG-Jqa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1nC-Nu-4fe" secondAttribute="trailing" constant="40" id="PDt-VX-2yR"/>
+                            <constraint firstItem="1Ky-9e-4kb" firstAttribute="top" secondItem="nSH-Ui-vB5" secondAttribute="bottom" constant="40" id="QDf-HK-lM5"/>
+                            <constraint firstItem="y0C-wn-WMA" firstAttribute="centerX" secondItem="nSH-Ui-vB5" secondAttribute="centerX" id="aCo-FN-u1Z"/>
+                            <constraint firstItem="1nC-Nu-4fe" firstAttribute="top" secondItem="1Ky-9e-4kb" secondAttribute="bottom" constant="106" id="bdi-Dr-uxs"/>
+                            <constraint firstItem="li8-6Y-C9f" firstAttribute="top" secondItem="1Ky-9e-4kb" secondAttribute="bottom" constant="8" symbolic="YES" id="ftj-XJ-4kP"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nSH-Ui-vB5" secondAttribute="trailing" constant="20" id="h8p-9s-7KK"/>
                             <constraint firstItem="nSH-Ui-vB5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="hnp-Kf-iuL"/>
+                            <constraint firstItem="li8-6Y-C9f" firstAttribute="centerX" secondItem="1Ky-9e-4kb" secondAttribute="centerX" id="iV9-dV-zfO"/>
+                            <constraint firstItem="nSH-Ui-vB5" firstAttribute="leading" secondItem="82k-eM-Hg1" secondAttribute="trailing" constant="10" id="jXv-JW-IXz"/>
+                            <constraint firstItem="tsJ-Yo-7hl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="pf2-ay-Tbm"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1Ky-9e-4kb" secondAttribute="trailing" constant="20" id="wEF-Wh-3U9"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Ksl-wo-evG"/>
+                    <connections>
+                        <outlet property="emailTF" destination="nSH-Ui-vB5" id="aEU-7P-HFj"/>
+                        <outlet property="emailTipLb" destination="y0C-wn-WMA" id="wDd-9J-l3E"/>
+                        <outlet property="loginBtn" destination="1nC-Nu-4fe" id="g63-jo-dhR"/>
+                        <outlet property="passwordTF" destination="1Ky-9e-4kb" id="dto-Sh-zPv"/>
+                        <outlet property="passwordTipLb" destination="li8-6Y-C9f" id="qSt-b0-4lR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -62,6 +120,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
