--- a/LoginDemo/Resources/Base.lproj/Main.storyboard
+++ b/LoginDemo/Resources/Base.lproj/Main.storyboard
@@ -18,12 +18,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nSH-Ui-vB5">
-                                <rect key="frame" x="71" y="108" width="323" height="34"/>
+                                <rect key="frame" x="75" y="108" width="319" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Ky-9e-4kb">
-                                <rect key="frame" x="71" y="182" width="323" height="34"/>
+                                <rect key="frame" x="75" y="182" width="319" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="alphabet" secureTextEntry="YES"/>
                             </textField>
@@ -51,13 +51,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y0C-wn-WMA">
-                                <rect key="frame" x="230.5" y="150" width="4" height="18"/>
+                                <rect key="frame" x="232.5" y="150" width="4" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="li8-6Y-C9f">
-                                <rect key="frame" x="230.5" y="224" width="4" height="18"/>
+                                <rect key="frame" x="232.5" y="224" width="4" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -72,6 +72,7 @@
                             <constraint firstItem="82k-eM-Hg1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="FNB-Tz-83P"/>
                             <constraint firstItem="1Ky-9e-4kb" firstAttribute="leading" secondItem="nSH-Ui-vB5" secondAttribute="leading" id="LVb-NR-1gn"/>
                             <constraint firstItem="y0C-wn-WMA" firstAttribute="top" secondItem="nSH-Ui-vB5" secondAttribute="bottom" constant="8" symbolic="YES" id="N3c-NG-Jqa"/>
+                            <constraint firstItem="1Ky-9e-4kb" firstAttribute="leading" secondItem="tsJ-Yo-7hl" secondAttribute="trailing" constant="20" id="OjH-wG-Tzp"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1nC-Nu-4fe" secondAttribute="trailing" constant="40" id="PDt-VX-2yR"/>
                             <constraint firstItem="1Ky-9e-4kb" firstAttribute="top" secondItem="nSH-Ui-vB5" secondAttribute="bottom" constant="40" id="QDf-HK-lM5"/>
                             <constraint firstItem="y0C-wn-WMA" firstAttribute="centerX" secondItem="nSH-Ui-vB5" secondAttribute="centerX" id="aCo-FN-u1Z"/>
@@ -80,7 +81,6 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nSH-Ui-vB5" secondAttribute="trailing" constant="20" id="h8p-9s-7KK"/>
                             <constraint firstItem="nSH-Ui-vB5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="hnp-Kf-iuL"/>
                             <constraint firstItem="li8-6Y-C9f" firstAttribute="centerX" secondItem="1Ky-9e-4kb" secondAttribute="centerX" id="iV9-dV-zfO"/>
-                            <constraint firstItem="nSH-Ui-vB5" firstAttribute="leading" secondItem="82k-eM-Hg1" secondAttribute="trailing" constant="10" id="jXv-JW-IXz"/>
                             <constraint firstItem="tsJ-Yo-7hl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="pf2-ay-Tbm"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1Ky-9e-4kb" secondAttribute="trailing" constant="20" id="wEF-Wh-3U9"/>
                         </constraints>
